feat: Added public read object permission

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,7 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: "us-west-1"
     - name: Push model to  s3
-      run: aws s3 cp  regmodel.pkl s3://${AWS_S3_BUCKET}/regmodel.pkl
+      run: aws s3 cp  regmodel.pkl s3://${AWS_S3_BUCKET}/regmodel.pkl --acl public-read
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
     
